// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt text-link Props icon after 1`] = `
<a href="https://pega.com"
   target="_blank"
   class="e-bolt-text-link"
>
  This is a text link
  <span class="e-bolt-text-link__icon-after"
        aria-hidden="true"
  >
    <bolt-icon name="chevron-down"
               aria-hidden="true"
    >
      <span class="c-bolt-icon c-bolt-icon--chevron-down">
        <svg class="c-bolt-icon__icon"
             xmlns="http://www.w3.org/2000/svg"
             viewbox="0 0 32 32"
        >
          <path fill="var(--bolt-theme-icon, currentColor)"
                fill-rule="evenodd"
                d="M25 13c.5-.6.5-1.4 0-2-.6-.5-1.4-.5-2 0l-7 7.1-7-7a1.3 1.3 0 00-2.3.9c0 .3.1.7.4 1l8 8c.5.5 1.3.5 1.8 0l8-8z"
          >
          </path>
        </svg>
      </span>
    </bolt-icon>
  </span>
</a>
`;

exports[`Bolt text-link Props reverse underline 1`] = `
<a href="https://pega.com"
   target="_blank"
   class="e-bolt-text-link e-bolt-text-link--reversed-underline"
>
  This is a text link
</a>
`;

exports[`Bolt text-link default 1`] = `
<a href="https://pega.com"
   target="_blank"
   class="e-bolt-text-link"
>
  This is a text link
</a>
`;
